@@ -1,5 +1,8 @@
 2006-05-05 Sandro Santilli <strk@refractions.net>
 
+	* source/noding/snapround/MCIndexSnapRounder.cpp,
+	source/noding/snapround/SimpleSnapRounder.cpp:
+	had noding validation failure throw an exception.
 	* tests/unit/Makefile.am,
 	tests/unit/noding/SegmentStringTest.cpp:
 	SegmentString unit test.
